add, edit and datatable is finished in category

--- a/ECommerceSite/ECommerceSite.csproj
+++ b/ECommerceSite/ECommerceSite.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ECommereceSiteData\ECommereceSiteData.csproj" />
+    <ProjectReference Include="..\ECommereceSiteModels\ECommereceSiteModels.csproj" />
   </ItemGroup>
 
 </Project>
