--- a/ECommerceSite/ECommerceSite.csproj
+++ b/ECommerceSite/ECommerceSite.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\ECommereceSiteModels\ECommereceSiteModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\category\" />
+  </ItemGroup>
+
 </Project>
