--- a/ECommerceSite/ECommerceSite.csproj
+++ b/ECommerceSite/ECommerceSite.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\category\" />
+    <Folder Include="wwwroot\images\homeSlider\" />
     <Folder Include="wwwroot\images\product\" />
   </ItemGroup>
 
